# tmap2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements-core.txt  ruff.toml
.github/workflows/: publish.yml  quality.yml  tests.yml
benchmarks/diversity_run/: README.md  bench_diversity.py  run.sh
benchmarks/workers/: bench_worker.py
cpp/: CMakeLists.txt
cpp/include/: layout.hpp
cpp/src/: bindings.cpp  layout.cpp
docs/: ROADMAP.md  api_reference.md  design_patterns.md  graph_guide.md  index.md  layout_guide.md  lshforest_guide.md  minhash_guide.md  molecule_tutorial.md  usearch_backend.md  visualization_guide.md
examples/: README.md  add_points_demo.ipynb  cluster_65053.csv  cluster_65053_tmap.py  cub200_birds_tmap.py  emnist_characters_tmap.py  flowers_tmap.py  mnist_cosine_tmap.py  molecules_tmap.py  pet_breed_audit.py  simple_inline_demo.py  smiles_tmap.py  visualization_demo.py  wikiart_tmap.py  word_embeddings_50k.py  word_embeddings_tmap.py
notebooks/: 01_quickstart.ipynb  02_minhash_deep_dive.ipynb  03_continuous_embeddings.ipynb  03_tuning_parameters.ipynb  04_jscatter_demo.ipynb  04_new_functionalities.ipynb  05_faq.ipynb  05_single_cell.ipynb  06_faq.ipynb  06_metric_guide.ipynb  06_minhash_deep_dive.ipynb  07_faq.ipynb  08_cheminformatics.ipynb  08_jscatter_demo.ipynb  09_protein_analysis.ipynb  10_protein_analysis.ipynb  10_visualization_guide.ipynb  11_card_configuration.ipynb  11_legacy_lsh_pipeline.ipynb  12_legacy_lsh_pipeline.ipynb  12_usearch_jaccard.ipynb
scripts/: bench_addpoints.py  bench_all_sequential.sh  bench_analysis_quality.py  bench_index_scale.py  bench_paper.py  bench_pipeline.py  bench_recall.py  bench_usearch_frontier.py  benchmark_tmap_examples.py  plot_paper.py  save_layout.py
scripts/regl_demo/: export_standalone.py  export_tmap_layout.py  index.html  serve_demo.py
src/tmap/: __init__.py  core.py  estimator.py
src/tmap/graph/: __init__.py  analysis.py  mst.py  types.py
src/tmap/index/: __init__.py  _lsh_numba.py  base.py  faiss_index.py  lsh_forest.py  nndescent.py  types.py  usearch_index.py
src/tmap/index/encoders/: __init__.py  _minhash_numba.py  base.py  minhash.py
src/tmap/layout/: __init__.py  _ogdf.py  _tmap_ogdf.pyi  base.py  force_directed.py  types.py
src/tmap/utils/: __init__.py  chemistry.py  proteins.py  singlecell.py
src/tmap/visualization/: __init__.py  base.py  binary.py  colormaps.py  jupyter.py  simple_inline.py  static.py  tmapviz.py
src/tmap/visualization/static/: worker.js
src/tmap/visualization/templates/: afdb.html.j2  base.html.j2  binary.html.j2  images.html.j2  images_binary.html.j2  protein.html.j2  protein_binary.html.j2  server.html.j2  smiles.html.j2  smiles_binary.html.j2
tests/: test_analysis.py  test_ann_backends.py  test_end_to_end.py  test_estimator.py  test_exports.py  test_graph.py  test_index_types.py  test_jupyter_viz.py  test_layout_from_lsh_forest.py  test_layout_ogdf.py  test_lsh_forest.py  test_minhash.py  test_proteins.py  test_singlecell.py  test_visualization.py
