[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmap"
version = "0.1.0"
description = "Tree-based visualization for high-dimensional data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Alejandro Flores", email = "afloresep01@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "datasketch>=1.6.0",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.7"]
faiss-gpu = ["faiss-gpu>=1.7"]
annoy = ["annoy>=1.17"]
viz = ["jinja2>=3.1"]
fast = ["numba>=0.59"]  # JIT-compiled MinHash (50-100x faster for binary data)
dev = [
    "numba>=0.59",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
all = ["tmap[faiss,annoy,viz,fast,dev]"]

[project.urls]
Homepage = "https://github.com/afloresep/TMAP"
Documentation = "https://github.com/afloresep/TMAP#readme"
Repository = "https://github.com/afloresep/TMAP"

[tool.hatch.build.targets.wheel]
packages = ["src/tmap"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=tmap"
