[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "tmap"
version = "0.1.0"
description = "Tree-based visualization for high-dimensional data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    { name = "Alejandro Flores", email = "afloresep01@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "datasketch>=1.6.0",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.7"]
faiss-gpu = ["faiss-gpu>=1.7"]
annoy = ["annoy>=1.17"]
viz = ["jinja2>=3.1"]
fast = ["numba>=0.59"]
dev = [
    "numba>=0.59",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "matplotlib>=3.7",
     "jinja2>=3.1",
]
ogdf = []  # Marker only - OGDF must be installed system-wide
all = ["tmap[faiss,annoy,viz,fast,dev]"]

[project.urls]
Homepage = "https://github.com/afloresep/TMAP"
Documentation = "https://github.com/afloresep/TMAP#readme"
Repository = "https://github.com/afloresep/TMAP"

[tool.scikit-build]
wheel.packages = ["src/tmap"]
cmake.build-type = "Release"
build.verbose = true
wheel.install-dir = "tmap/layout"

[tool.scikit-build.cmake.define]
TMAP_OPTIONAL_OGDF = "ON"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E741", "E743", "N806"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=tmap"
