[build-system]
requires = [
    "scikit-build-core>=0.8",
    "pybind11>=2.11",
    "cmake>=3.15",
    "ninja>=1.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "tmap"
version = "0.1.0"
description = "Tree-based visualization for high-dimensional data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    { name = "Alejandro Flores", email = "afloresep01@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "datasketch>=1.6.0",
    "numba>=0.59",
    "jinja2>=3.1",
    "matplotlib>=3.7",
    "pandas>=2.2",
    "tqdm>=4.66",
    "jupyter-scatter>=0.22.2",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.7"]
faiss-gpu = ["faiss-gpu>=1.7"]
annoy = ["annoy>=1.17"]
viz = []
notebook = []
all = [
    "faiss-cpu>=1.7",
    "faiss-gpu>=1.7",
    "annoy>=1.17",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/afloresep/TMAP"
Documentation = "https://github.com/afloresep/TMAP#readme"
Repository = "https://github.com/afloresep/TMAP"

[tool.scikit-build]
wheel.packages = ["src/tmap"]
cmake.build-type = "Release"
build.verbose = true
wheel.install-dir = "tmap/layout"

[tool.scikit-build.cmake.define]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E741", "E743", "N806"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "tmap.index._lsh_numba",
    "tmap.index.encoders._minhash_numba",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=tmap"
